--- a/src/presence_analyzer/templates/main.html
+++ b/src/presence_analyzer/templates/main.html
@@ -26,21 +26,16 @@
     <div id="main"><div id="header">
         <h1>Presence analyzer</h1>
         <ul>
+            <li {% if request.path == '/statistics/mean_time_weekday/' %}id="selected"{% endif %}>
+            <a href="{{ url_for('statistics_view', chosen='mean_time_weekday') }}">Presence mean time</a>
+            </li>
+            <li {% if request.path == '/statistics/presence_start_end/' %}id="selected"{% endif %}>
+            <a href="{{ url_for('statistics_view', chosen='presence_start_end') }}">Presence start-end</a>
+            </li>
 
-        {% if request.path == '/mean_time_weekday/' %}
-            <li><a href="{{ url_for('presence_weekday_view') }}">Presence by weekday</a></li>
-            <li id="selected"><a href="{{ url_for('mean_time_weekday_view') }}">Presence mean time</a></li>
-            <li><a href="{{ url_for('presence_start_end_view') }}">Presence start-end</a></li>
-        {% elif request.path == '/presence_start_end/' %}
-            <li><a href="{{ url_for('presence_weekday_view') }}">Presence by weekday</a></li>
-            <li><a href="{{ url_for('mean_time_weekday_view') }}">Presence mean time</a></li>
-            <li id="selected"><a href="{{ url_for('presence_start_end_view') }}">Presence start-end</a></li>
-        {% elif request.path == '/presence_weekday/' %}
-            <li id="selected"><a href="{{ url_for('presence_weekday_view') }}">Presence by weekday</a></li>
-            <li><a href="{{ url_for('mean_time_weekday_view') }}">Presence mean time</a></li>
-            <li><a href="{{ url_for('presence_start_end_view') }}">Presence start-end</a></li>
-        {% endif %}
-
+            <li {% if request.path == '/statistics/presence_weekday/' %}id="selected"{% endif %}>
+            <a href="{{ url_for('statistics_view', chosen='presence_weekday') }}">Presence by weekday</a>
+            </li>
         </ul>
     </div>
     <div id="content">
