--- a/src/presence_analyzer/templates/presence_weekday.html
+++ b/src/presence_analyzer/templates/presence_weekday.html
@@ -1,6 +1,9 @@
 {% extends 'main.html' %}
 
 {% block additional_scripts %}
+    <script type="text/javascript">
+        google.load("visualization", "1", {packages:["corechart", "timeline"], 'language': 'pl'});
+    </script>
     <script src="/static/js/presence_weekday.js"></script>
 {% endblock additional_scripts %}
 
