Avatar layout corrected

--- a/src/presence_analyzer/templates/main.html
+++ b/src/presence_analyzer/templates/main.html
@@ -42,10 +42,12 @@
                 <%block name='content_heading'/>
             </h2>
             <p>
+                <div>
+                    <img id="user_avatar" src="">
+                </div>
                 <select id="user_id" style="display: none">
                     <option value="">--</option>
                 </select>
-                <img id="user_avatar" src="">
                 <div id="chart_div" style="display: none">
                 </div>
                 <div id="loading">
