Error message display method changed

--- a/src/presence_analyzer/templates/main.html
+++ b/src/presence_analyzer/templates/main.html
@@ -48,6 +48,9 @@
                 <select id="user_id" style="display: none">
                     <option value="">--</option>
                 </select>
+                <div>
+                    <p id="error-message"></p>
+                </div>
                 <div id="chart_div" style="display: none">
                 </div>
                 <div id="loading">
